--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "MIT",
   "dependencies": {
     "@babel/register": "^7.0.0",
+    "antd": "^3.20.0",
     "connected-react-router": "^5.0.1",
     "history": "^4.6.3",
     "prop-types": "^15.5.10",
@@ -21,7 +22,10 @@
     "redux": "^4.0.0",
     "redux-actions": "^2.2.1",
     "redux-localstorage": "^0.4.1",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "path": "^0.12.7",
+    "bagpipe": "^0.3.5",
+    "request": "^2.88.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.1.2",
